--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@reduxjs/toolkit": "^1.7.1",
     "expo": "~44.0.0",
+    "firebase": "^9.6.5",
+    "lodash.debounce": "^4.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
